force-app/main/default/objects/cgcloud__Template_Record_Type_Mapping__mdt/cgcloud__Template_Record_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Template Record Type Mapping</label>
    <pluralLabel>Template Record Type Mapping</pluralLabel>
</CustomObject>