force-app/main/default/objects/cgcloud__Template_Record_Type_Mapping__mdt/fields/cgcloud__Priority__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Priority__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>