force-app/main/default/objects/cgcloud__Template_Record_Type_Mapping__mdt/fields/cgcloud__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>