force-app/main/default/objects/cgcloud__Template_Record_Type_Mapping__mdt/fields/cgcloud__Template_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Definition__c</fullName>
    <label>Template Definition</label>
    <referenceTo>cgcloud__Template_Definition__mdt</referenceTo>
    <relationshipLabel>Template Record Type Mapping</relationshipLabel>
    <relationshipName>Template_Record_Type_Mapping</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>